<resources>
    <string name="app_name">Travel Bucket List</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="default_error">Error occurs</string>
    <string name="no_connection">No internet connection!</string>

    <string name="empty">""</string>
    <string name="login_also_info">You can also log in through</string>
    <string name="not_a_member_yet">Not a member yet?</string>
    <string name="register">Register</string>
    <string name="forgot">Forgot password?</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="login">Login</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="register_also_info">Register with</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="invalid_email">Please enter a valid email address</string>
    <string name="invalid_password">Password should contain at least 8 characters, 1 upper case and 1 number</string>
    <string name="invalid_username">Full name should contain at least 3 characters.</string>
    <string name="invalid_confirm">Passwords do not match.</string>
    <string name="auth_facebook_transition_name">facebook</string>
    <string name="facebook_app_id">159097104895948</string>
    <string name="fb_login_protocol_scheme">fb159097104895948</string>
</resources>
