<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <import type="android.view.View"/>

        <variable
            name="vm"
            type="com.b00sti.travelbucketlist.ui.auth.login.LoginViewModel"/>

    </data>

    <android.support.constraint.ConstraintLayout
        style="@style/Match">

        <View
            android:id="@+id/vBackgroundHeaderLogin"
            android:layout_width="0dp"
            android:layout_height="400dp"
            android:background="@drawable/gradient_accent"
            android:transitionName="background_header"/>

        <android.support.constraint.ConstraintLayout
            style="@style/Match">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/ivAppLogoLogin"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="48dp"
                android:background="@drawable/background_input"
                android:elevation="8dp"
                android:padding="2dp"
                android:src="@drawable/logo"
                android:transitionName="mLogo"
                app:layout_constraintBottom_toTopOf="@id/vgCredentialsLogin"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_max="180dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintWidth_max="180dp"/>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/vgCredentialsLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="48dp"
                android:layout_marginEnd="36dp"
                android:layout_marginStart="36dp"
                android:background="@drawable/background_input"
                android:elevation="8dp"
                android:padding="12dp"
                android:transitionName="background_credentials"
                app:layout_constraintBottom_toTopOf="@+id/tvSocialInfoLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilEmailLogin"
                    style="@style/Widget.TextInputLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="spread">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/tietEmailLogin"
                        style="@style/Widget.TextEdit"
                        onFocusChange="@{vm.focusChange}"
                        validation="@{vm.emailValid}"
                        android:afterTextChanged="@{()-> vm.afterChangeEmpty()}"
                        android:drawableStart="@drawable/ic_email_black_24dp"
                        android:hint="@string/email_address"
                        android:inputType="textEmailAddress"
                        android:text="@={vm.email}"
                        android:transitionName="email_input"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilPasswordLogin"
                    style="@style/Widget.TextInputLayout"
                    android:layout_marginTop="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tilEmailLogin">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/tietPasswordLogin"
                        style="@style/Widget.TextEdit"
                        onFocusChange="@{vm.focusChange}"
                        validation="@{vm.passwordValid}"
                        android:afterTextChanged="@{()-> vm.afterChangeEmpty()}"
                        android:drawableStart="@drawable/ic_key_black_24dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:text="@={vm.password}"
                        android:transitionName="password_input"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/buttonForgotLogin"
                    style="@style/AppTextAppearance.Bold.Medium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="start"
                    android:onClick="@{() -> vm.onForgotClick()}"
                    android:paddingBottom="48dp"
                    android:text="@string/forgot"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tilPasswordLogin"/>

            </android.support.constraint.ConstraintLayout>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/buttonTvLogin"
                style="@style/Widget.FullWidthButton"
                android:layout_marginEnd="54dp"
                android:layout_marginStart="54dp"
                android:layout_marginTop="12dp"
                android:elevation="24dp"
                android:onClick="@{() -> vm.onLoginClick()}"
                android:text="@string/login"
                android:transitionName="button"
                app:layout_constraintBottom_toBottomOf="@+id/vgCredentialsLogin"
                app:layout_constraintTop_toBottomOf="@+id/vgCredentialsLogin"
                app:layout_constraintVertical_bias="0.5"
                app:layout_constraintVertical_chainStyle="packed"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvSocialInfoLogin"
                style="@style/AppTextAppearance.Bold.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/login_also_info"
                android:transitionName="social_info"
                app:layout_constraintBottom_toTopOf="@+id/buttonFacebookLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_chainStyle="packed"/>

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/buttonFacebookLogin"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:onClick="@{() -> vm.onFacebookClick()}"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/facebook"
                app:layout_constraintBottom_toTopOf="@+id/tvRegisterInfoLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintWidth_max="160dp"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvRegisterInfoLogin"
                style="@style/AppTextAppearance.Bold.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_transparent_ripple"
                android:onClick="@{() -> vm.onRegisterClick()}"
                android:paddingTop="36dp"
                android:text="@string/not_a_member_yet"
                android:transitionName="info"
                app:layout_constraintBottom_toTopOf="@+id/buttonRegisterLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.5"
                app:layout_constraintVertical_chainStyle="packed"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/buttonRegisterLogin"
                style="@style/AppTextAppearance.Bold.Heavy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_transparent_ripple"
                android:onClick="@{() -> vm.onRegisterClick()}"
                android:padding="12dp"
                android:text="@string/register"
                android:transitionName="switch"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tvRegisterInfoLogin"
                app:layout_constraintStart_toStartOf="@+id/tvRegisterInfoLogin"
                app:layout_constraintVertical_chainStyle="packed"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

</layout>